noticed small styling bug on mobile device, added fix

--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,7 @@
     color: var(--black);
     text-align: center;
     margin: 0;
-    width: 100vw;
+    /* width: 100vw; */
   }
   
   h1{
